no depth buffer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,15 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(SDL2_INCLUDE_DIRS /opt/homebrew/include/SDL2)
 set(SDL2_LIBRARIES /opt/homebrew/lib/libSDL2.dylib)
 
+# Find SDL2_gfx using homebrew path on macOS
+set(SDL2_GFX_INCLUDE_DIRS /opt/homebrew/include/SDL2)
+set(SDL2_GFX_LIBRARIES /opt/homebrew/lib/libSDL2_gfx.dylib)
+
 # Include directories
 include_directories(${CMAKE_SOURCE_DIR}/include)
 include_directories(${CMAKE_SOURCE_DIR}/graphics)
 include_directories(${SDL2_INCLUDE_DIRS})
+include_directories(${SDL2_GFX_INCLUDE_DIRS})
 
 # Source files
 set(SOURCES
@@ -24,4 +29,4 @@ set(SOURCES
 add_executable(3DEngine ${SOURCES})
 
 # Link libraries
-target_link_libraries(3DEngine ${SDL2_LIBRARIES})
+target_link_libraries(3DEngine ${SDL2_LIBRARIES} ${SDL2_GFX_LIBRARIES})
